static/sass/cards/_card-5.scss
.card-5-desktop {
    @media #{$desktop-up} {
        .c-cards-view {
            @include flex-direction(column, vertical);
            height: 680px;
            &__media {
                min-height: 450px;
                height: 450px;
                margin-bottom: 15px;
                overflow: hidden;
            }

            &__heading {
                @include font-size(32);
                line-height: 1.33;
                margin-top: 5px;
            }

            &__description {
                color: $grey5;
                @include font-size(13);
                line-height: 1.38;
            }

            &__author {
                @include flexbox;
                @include align-items(center);

                &-name {
                    @include font-size(12);
                    color: $black;
                    line-height: 1.33;
                    font-family: $primaryFont;
                    font-weight: $weightMedium;
                    margin-right: 15px;
                    position: relative;
                    padding-left: 12px;

                    &:before {
                        content: "";
                        position: absolute;
                        left: 0;
                        top: 50%;
                        @include translate(0, -50%);
                        @include size(4px);
                        background-color: $blue_sh5;
                    }
                }
            }
        }
    }
}

.card-5-text-center {
    .c-cards-view {
        text-align: center;

        &__author {
            @include justify-content(center);

            &.c-cards-view__media--video {
                padding-left: 0px;
                &:before {
                    display: none;
                }

                .c-cards-view__author-name {
                    padding-left: 15px;
                    &:before {
                        content: "\f04b";
                        display: block;
                        font-family: $iconfont;
                        color: $blue_sh5;
                        @include size(auto);
                        @include font-size(9);
                        line-height: 1;
                        top: 2px;
                        left: 0;
                        @include translate(0, 0);
                        background-color: transparent;
                    }
                }
            }
        }
    }
}

